5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4010/executions/1573_996.log
== TEST (2019-03-11 14:59:37) 
-- CODE:
 print("*****")
print("* 0 0 * ")
 print("* ^ *")
print("* --- * ")
 print("***** ")
-- ERROR:
File "XXXX", line 1
    print("*****")
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 14:59:54) 
-- CODE:
 print("*****")
print("* 0 0 * ")
 print("* ^ *")
print("* --- * ")
 print(" ***** ")
-- ERROR:
File "XXXX", line 1
    print("*****")
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:00:40) 
-- CODE:
 print("* * * * *")
  print("* 0 0 * ")
   print("* ^ *")
  print("* --- * ")
 print("* * * * * ")
-- ERROR:
File "XXXX", line 1
    print("* * * * *")
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:01:34) 
-- CODE:
  print("* * * * * ")
  print(" * 0 0 * ")
   print(" * ^ *")
  print(" * --- * ")
 print(" * * * * * ")
-- ERROR:
File "XXXX", line 1
    print("* * * * * ")
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:01:38) 
-- CODE:
  print("* * * * * ")
  print(" * 0 0 * ")
   print(" * ^ *")
  print(" * --- * ")
 print(" * * * * * ")
-- ERROR:
File "XXXX", line 1
    print("* * * * * ")
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:01:40) 
-- CODE:
  print("* * * * * ")
  print(" * 0 0 * ")
   print(" * ^ *")
  print(" * --- * ")
 print(" * * * * * ")
-- ERROR:
File "XXXX", line 1
    print("* * * * * ")
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:01:41) 
-- CODE:
  print("* * * * * ")
  print(" * 0 0 * ")
   print(" * ^ *")
  print(" * --- * ")
 print(" * * * * * ")
-- EXECUTION TIME:
0.179319
-- ERROR:
  File "/home/codebench/codes/1573/996/main.py", line 1
    print("* * * * * ")
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:03:03) 
-- CODE:
 print("* * * * *")
  print("* 0 0 *")
   print("* ^ *")
  print("* --- *")
 print("* * * * *")
-- ERROR:
File "XXXX", line 1
    print("* * * * *")
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:04:17) 
-- CODE:
 print("* * * * *")
  print("* o o *")
   print("* ^ *")
  print("* --- *")
 print("* * * * *")
-- ERROR:
File "XXXX", line 1
    print("* * * * *")
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:05:17) 
-- CODE:
  print("*****")
print("(* o o *)")
print("*  ^  * ")
print("* --- * ")
print("***** ")
-- ERROR:
File "XXXX", line 1
    print("*****")
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:05:37) 
-- CODE:
  print("*****")
print("(* o o *)")
print("*  ^  *")
print("* --- *")
print("*****")
-- ERROR:
File "XXXX", line 1
    print("*****")
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:05:49) 
-- CODE:
print("*****")
print("(* o o *)")
print("*  ^  *")
print("* --- *")
print("*****")
-- OUTPUT:
*****
(* o o *)
*  ^  *
* --- *
*****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:05:52) 
-- CODE:
print("*****")
print("(* o o *)")
print("*  ^  *")
print("* --- *")
print("*****")
-- EXECUTION TIME:
0.206481
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
*****
(* o o *)
*  ^  *
* --- *
*****
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
